--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3071,15 +3071,15 @@
 						<tr>
 							<td>
 								<input type="text" style="width: 70%" name="system.rpm.higherPurpose1Name" value="{{actor.system.rpm.higherPurpose1Name}}" placeholder="Higher Purpose 1" />
-								<input type="number" style="width: 20%" name="system.rpm.higherPurpose1level" value="{{actor.system.rpm.higherPurpose1level}}" data-dtype="Number" />
+								<input type="number" style="width: 20%" name="system.rpm.higherPurpose1Level" value="{{actor.system.rpm.higherPurpose1Level}}" data-dtype="Number" />
 							</td>
 							<td>
 								<input type="text" style="width: 70%" name="system.rpm.higherPurpose2Name" value="{{actor.system.rpm.higherPurpose2Name}}" placeholder="Higher Purpose 2" />
-								<input type="number" style="width: 20%" name="system.rpm.higherPurpose2level" value="{{actor.system.rpm.higherPurpose2level}}" data-dtype="Number" />
+								<input type="number" style="width: 20%" name="system.rpm.higherPurpose2Level" value="{{actor.system.rpm.higherPurpose2Level}}" data-dtype="Number" />
 							</td>
 							<td>
 								<input type="text" style="width: 70%" name="system.rpm.higherPurpose3Name" value="{{actor.system.rpm.higherPurpose3Name}}" placeholder="Higher Purpose 3" />
-								<input type="number" style="width: 20%" name="system.rpm.higherPurpose3level" value="{{actor.system.rpm.higherPurpose3level}}" data-dtype="Number" />
+								<input type="number" style="width: 20%" name="system.rpm.higherPurpose3Level" value="{{actor.system.rpm.higherPurpose3Level}}" data-dtype="Number" />
 							</td>
 						</tr>
 					</table>
