--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -10,7 +10,10 @@
             <table style="margin: unset; padding: unset; background: unset; border: unset;">
                 <tr>
                     <td style="width: 50%; vertical-align:top"><!-- Left Col -->
-                        <table>
+                        <table style="background: #00ffff47">
+                            <tr>
+                                <th colspan="2" style="font-size: larger">Ritual Details</th>
+                            </tr>
                             <tr>
                                 <td>
                                     <label class="resource-label" style="flex: 0.5;">Ritual Type:</label>
@@ -77,7 +80,10 @@
                     </td>
                     <td style="width: 50%; vertical-align:top"><!-- Right Col -->
                         {{#if (or (eq item.system.ritualType "charm") (eq item.system.ritualType "conditionalCharm"))}}
-                        <table>
+                        <table style="background: rgba(255,102,0,0.28)">
+                            <tr>
+                                <th colspan="2" style="font-size: larger">Charm Specific Details</th>
+                            </tr>
                             <tr>
                                 <td>
                                     <label class="resource-label" style="flex: 0.5;">Workspace Modifier: </label>
@@ -143,7 +149,10 @@
                         {{/if}}
 
                         {{#if (eq item.system.ritualType "elixir") }}
-                        <table>
+                        <table style="background: rgba(0,255,21,0.28)">
+                            <tr>
+                                <th colspan="2" style="font-size: larger">Elixir Specific Details</th>
+                            </tr>
                             <tr>
                                 <td>
                                     <label class="resource-label" style="flex: 0.5;">Workspace Modifier</label>
@@ -169,7 +178,7 @@
                                 </td>
                             </tr>
                         </table>
-                        <table>
+                        <table style="background: rgba(0,255,21,0.28)">
                             <tr>
                                 <th colspan="4" style="font-size: larger; text-decoration: underline;">Alchemy Ingredients</th>
                             </tr>
@@ -287,8 +296,59 @@
                 <input type="text" name="system.shortNotes" value="{{item.system.shortNotes}}" style="width: calc(100% - 78px);"/>
             </div>
 
+            <!-- Energy Gathering -->
+            <table style="background: #7900ff47">
+                <tr>
+                    <th colspan="4" style="font-size: larger">Energy Gathering</th>
+                </tr>
+                <tr>
+                    <td style="text-align: right; padding-right: 1em;">
+                        {{#if (eq item.system.ritualAdeptTime 0) }}
+                        Minutes per attempt
+                        {{/if}}
+                        {{#if (eq item.system.ritualAdeptTime 1) }}
+                        Seconds for first attempt, minutes per subsequent attempts
+                        {{/if}}
+                        {{#if (eq item.system.ritualAdeptTime 2) }}
+                        Seconds per attempt
+                        {{/if}}
+                    </td>
+                    <td>
+                        <input type="number" style="width: 50%" name="system.timeUnitsPerAttempt" value="{{item.system.timeUnitsPerAttempt}}" data-dtype="Number" />
+                    </td>
+                    <td style="text-align: right; padding-right: 1em;">
+                        Gathering Modifier
+                    </td>
+                    <td>
+                        <input type="number" style="width: 50%" name="system.gatherMod" value="{{item.system.gatherMod}}" data-dtype="Number" />
+                    </td>
+                </tr>
+                <tr>
+                    <td style="text-align: right; padding-right: 1em;">
+                        Use personal mana reserve
+                    </td>
+                    <td>
+                        <input id="usePersonalMana" type="checkbox" name="system.usePersonalMana" {{checked item.system.usePersonalMana}} data-dtype="Boolean"/>
+                    </td>
+                    <td style="text-align: right; padding-right: 1em;">
+                        Extra mana from other sources
+                    </td>
+                    <td>
+                        <input type="number" style="width: 50%" name="system.extraMana" value="{{item.system.extraMana}}" data-dtype="Number" />
+                    </td>
+                    </tr>
+                <tr>
+                    <td colspan="4">
+                        <input type='button' class='gatherEnergy' id="gatherEnergy" value='Gather Energy' style="width: 100%; height: 30px; font-weight: bold;"/>
+                    </td>
+                </tr>
+            </table>
+
             <!-- Paths -->
-            <table>
+            <table style="background: #ed143d47;">
+                <tr>
+                    <th colspan="7" style="font-size: larger">Path Details</th>
+                </tr>
                 <tr>
                     <td style="width: 70px;">Level</td>
                     <td style="width: 90px;">Effect</td>
@@ -347,7 +407,10 @@
             </table>
 
             <!-- Ritual Modifiers -->
-            <table>
+            <table style="background: rgba(190,237,20,0.28);">
+                <tr>
+                    <th colspan="5" style="font-size: larger">Modifier Details</th>
+                </tr>
                 <tr>
                     <td style="width: 143px;">Modifier</td>
                     <td>Effect</td>
