Corrected skill rolls to actually work

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -363,7 +363,7 @@
 											{{item.system.points}}
 										</td>
 										<td class="item-skill" style="width: 3em;">
-											<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{actor.system.level}}"
+											<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
 												   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
 											{{item.system.level}}
 										</td>
