Added a click handler to gather energy for Rituals

--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -339,7 +339,7 @@
                     </tr>
                 <tr>
                     <td colspan="4">
-                        <input type='button' class='gatherEnergy' id="gatherEnergy" value='Gather Energy' style="width: 100%; height: 30px; font-weight: bold;"/>
+                        <input type='button' class='gatherEnergy' id="{{item.name}}" value='Gather Energy' style="width: 100%; height: 30px; font-weight: bold;"/>
                     </td>
                 </tr>
             </table>
