Added a row to the Ritual sheet allowing users to set the number they have prepared.

--- a/templates/item/Ritual-sheet.html
+++ b/templates/item/Ritual-sheet.html
@@ -92,6 +92,14 @@
                                     {{item.system.energyCost}}
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <label class="resource-label" style="flex: 0.5;">Number Ready</label>
+                                </td>
+                                <td>
+                                    <input type="number" style="width: 50%" name="system.quantity" value="{{item.system.quantity}}" data-dtype="Number" />
+                                </td>
+                            </tr>
                         </table>
                     </td>
                     <td style="width: 50%; vertical-align:top"><!-- Right Col -->
