--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -507,6 +507,7 @@
 					</tr>
 					{{#each actor.items as |item id|}}
 					{{#each item.system.melee as |melee mid|}}
+					{{#unless (and (eq item.type "Ritual") (eq item.system.quantity 0))}}
 					<tr>
 						<td>{{item.name}}</td>
 						<td>{{melee.name}}</td>
@@ -537,6 +538,7 @@
 						<td>{{melee.reach}}</td>
 						<td>{{melee.st}}</td>
 					</tr>
+					{{/unless}}
 					{{/each}}
 					{{/each}}
 				</table>
@@ -559,6 +561,7 @@
 					</tr>
 					{{#each actor.items as |item id|}}
 					{{#each item.system.ranged as |ranged rid|}}
+					{{#unless (and (eq item.type "Ritual") (eq item.system.quantity 0))}}
 					<tr>
 						<td>{{item.name}}</td>
 						<td>{{ranged.name}}</td>
@@ -580,6 +583,7 @@
 						<td>{{ranged.rcl}}</td>
 						<td>{{ranged.st}}</td>
 					</tr>
+					{{/unless}}
 					{{/each}}
 					{{/each}}
 				</table>
@@ -597,6 +601,7 @@
 					</tr>
 					{{#each actor.items as |item id|}}
 					{{#each item.system.affliction as |affliction mid|}}
+					{{#unless (and (eq item.type "Ritual") (eq item.system.quantity 0))}}
 					<tr>
 						<td>{{item.name}}</td>
 						<td>{{affliction.name}}</td>
@@ -613,6 +618,7 @@
 						<td>{{affliction.resistanceRoll}} {{affliction.resistanceRollPenalty}}</td>
 						<td>{{affliction.ruleOf}}</td>
 					</tr>
+					{{/unless}}
 					{{/each}}
 					{{/each}}
 				</table>
