Updated point total calculation to correctly account for points spent on paths.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -135,7 +135,7 @@
 						{{/if}}
 						<tr>
 							<td class="">Unspent:</td>
-							<td><input type="text" name="system.points.unspent" class="pointTotal unspentEntry" value="{{actor.system.points.unspent}}" data-dtype="Number"/></td>
+							<td><input type="number" name="system.points.unspent" class="pointTotal unspentEntry" value="{{actor.system.points.unspent}}" data-dtype="Number"/></td>
 						</tr>
 					</table>
 				</div>
