Correcting issue where coreSkill would keep defaulting to Thaumatology on the first pass through, screwing up the skill level calculation.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -2995,7 +2995,7 @@
 						<tr>
 							<td>
 								Core Skill:
-								<input type="text" style="width: 55%" name="system.rpm.coreSkill" value="{{actor.system.rpm.coreSkill}}" placeholder="" />
+								<input type="text" style="width: 55%" class="rpmCoreSkill" name="system.rpm.coreSkill" value="{{actor.system.rpm.coreSkill}}" placeholder="" />
 								{{actor.system.rpm.coreSkillLevel}}
 							</td>
 						</tr>
