--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -388,7 +388,11 @@
 						</tr>
 						{{#each actor.system.encumbrance as |enc id|}}
 						{{#unless enc.ref}}
+						{{#if (eq ../actor.system.encumbrance.current.title enc.title)}}
+						<tr class="enc-entry enc-current">
+						{{else}}
 						<tr class="enc-entry">
+						{{/if}}
 							<td>{{enc.title}}</td>
 							<td>{{enc.lbs}}</td>
 							<td>{{enc.move}}</td>
