Updated Canister and Shotshell ammo with proper LC and range

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -2071,7 +2071,7 @@
                                 </td>
                             </tr>
 
-                            {{#if (or (eq ammo.projectile "shotshell") (eq ammo.projectile "rs"))  }}
+                            {{#if (or (eq ammo.projectile "shotshell") (eq ammo.projectile "canister") (eq ammo.projectile "rs"))  }}
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
                                     Number of Projectiles
