--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -391,7 +391,7 @@
 						{{#if (eq ../actor.system.encumbrance.current.title enc.title)}}
 						<tr class="enc-entry enc-current">
 						{{else}}
-						<tr class="enc-entry">
+						<tr class="enc-entry enc-inactive">
 						{{/if}}
 							<td>{{enc.title}}</td>
 							<td>{{enc.lbs}}</td>
