The manual dodge buttons on the combat tab now show the enc level in the resulting chat box.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -398,7 +398,7 @@
 							<td>{{enc.move}}</td>
 							<td>{{enc.dodge}}
 								<label class="fa fa-dice-six rollable" data-level="{{enc.dodge}}"
-									   data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll." data-type="skill"></label>
+									   data-label="Makes a &lt;b&gt;Dodge&lt;/b&gt; roll at an encumbrance level of {{enc.title}}" data-type="skill"></label>
 							</td>
 						</tr>
 						{{/unless}}
